added portfolio items

--- a/src/index.html
+++ b/src/index.html
@@ -12,9 +12,13 @@
 </head>
 
 <body>
-  <app-root>Loading...</app-root>
+
+  <app-root><div id="preloader">
+  <div></div>
+</div></app-root>
   
   <dialog-outlet></dialog-outlet>
+    
 </body>
 
 </html>
