--- a/src/index.html
+++ b/src/index.html
@@ -5,20 +5,243 @@
   <meta charset="utf-8">
   <title>Portfolio</title>
   <base href="/">
+  <style type="text/css">
+    @-webkit-keyframes spin {
+      0% {
+        transform: rotate(0deg);
+        /* Firefox 16+, IE 10+, Opera */
+      }
+      100% {
+        transform: rotate(360deg);
+        /* Firefox 16+, IE 10+, Opera */
+      }
+    }
+
+    @-moz-keyframes spin {
+      0% {
+        -moz-transform: rotate(0deg);
+        /* Firefox 16+*/
+      }
+      100% {
+        -moz-transform: rotate(360deg);
+        /* Firefox 16+*/
+      }
+    }
+
+    @keyframes spin {
+      0% {
+        transform: rotate(0deg);
+        /* Firefox 16+, IE 10+, Opera */
+      }
+      100% {
+        transform: rotate(360deg);
+        /* Firefox 16+, IE 10+, Opera */
+      }
+    }
+
+    #welcome {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      z-index: 1003;
+      background: white;
+
+      /* Chrome, Firefox 16+, IE 10+, Opera */
+      /*&:before {
+      content: "";
+      position: absolute;
+      top: 5px;
+      left: 5px;
+      right: 5px;
+      bottom: 5px;
+      border-radius: 50%;
+      border: 2px solid transparent;
+      border-top-color: $np-color-primary;
+      -webkit-animation: spin 3s linear infinite; 
+      animation: spin 3s linear infinite; 
+    }
+    &:after {
+      content: "";
+      position: absolute;
+      top: 15px;
+      left: 15px;
+      right: 15px;
+      bottom: 15px;
+      border-radius: 50%;
+      border: 2px solid transparent;
+      border-top-color: $np-color-accent;
+      animation: spin 1.5s linear infinite; 
+    }*/
+    }
+
+    #welcome-circle {
+      display: flex;
+      position: relative;
+      left: 50%;
+      top: 50%;
+      width: 288px;
+      height: 288px;
+      margin: -144px 0 0 -144px;
+      border-radius: 50%;
+    }
+
+    #welcome-logo {
+      vertical-align: middle;
+      width: 128px;
+      height: 128px;
+      margin: auto;
+    }
+
+
+    #welcome-logo .st0 {
+      stroke-dashoffset: 500;
+      stroke-dasharray: 500;
+      stroke-width: 2;
+      animation: draw-dash 5s linear forwards;
+      stroke: #1f9498;
+      fill-opacity: 0;
+    }
+
+    #welcome-logo .st1 {
+      opacity: 0;
+      fill: #1f9498;
+      animation: change-opacity 5s linear forwards;
+    }
+
+    @keyframes draw-dash {
+      /*from {
+        stroke-dashoffset: 500;
+      }
+      to {
+        stroke-dashoffset: 0;
+      }*/
+      
+      0% {
+        stroke-dashoffset: 500;
+      }
+
+      20% {
+        stroke-dashoffset: 500;
+      }
+
+
+      100% {
+        stroke-dashoffset: 0;
+      }
+    }
+
+    @keyframes change-opacity {
+      0% {
+
+        opacity: 0;
+      }
+
+      80% {
+
+        opacity: 0;
+      }
+
+
+      100% {
+
+        opacity: 1;
+      }
+    }
+  </style>
+
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Comfortaa:300,400,700|Open+Sans:300,400,600,700" rel="stylesheet">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+
 </head>
 
 <body>
 
-  <app-root><div id="preloader">
+  <!--app-root><div id="intermediate-circle">
   <div></div>
-</div></app-root>
+</div></app-root-->
+
   
+
+  <app-root>
+
+
+ 
+  <div id="welcome">
+    <div id="welcome-circle">
+      <div id="welcome-logo">
+
+        <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+          viewBox="0 0 512 512" style="enable-background:new 0 0 512 512;" xml:space="preserve">
+          <style type="text/css">
+            .st0 {
+              fill: none;
+              stroke-miterlimit: 10;
+            }
+
+            .st1 {
+              opacity: 0;
+            }
+          </style>
+          <g id="XMLID_2_">
+            <path class="st1" id="XMLID_3_" d="M94.2,280.9c0,2.5-0.9,4.5-2.7,6.1c-1.8,1.6-3.8,2.4-6,2.4c-1.6,0-3-0.4-4.2-1.2l-61.9-37.1
+		c-3-1.9-4.5-4.5-4.5-7.7c0-2.9,1.5-5.4,4.5-7.6l61.9-37.3c1.6-0.7,3-1,4.4-1c2.3,0,4.4,0.8,6,2.3c1.7,1.5,2.5,3.4,2.5,5.8
+		c0,3.4-1.4,5.9-4.2,7.6l-50.5,30.1L90,273.5C92.8,275.3,94.2,277.8,94.2,280.9z" />
+            <path class="st1" id="XMLID_5_" d="M181.8,214.3c6.2,3.4,11,8.3,14.4,14.7c3.5,6.4,5.2,14.2,5.2,23.3v41.3c0,2.5-0.8,4.5-2.4,6.1
+		c-1.6,1.6-3.7,2.4-6.1,2.4c-2.5,0-4.5-0.8-6.1-2.4c-1.6-1.6-2.4-3.7-2.4-6.1v-41.3c0-9.1-2.4-15.9-7.3-20.6c-4.9-4.6-11.3-7-19.4-7
+		c-4.7,0-9,1-12.8,2.9c-3.9,1.9-6.9,4.5-9.1,7.7c-2.2,3.2-3.3,6.9-3.3,10.9v47.3c0,2.5-0.8,4.5-2.4,6.1c-1.6,1.6-3.6,2.4-6.2,2.4
+		c-2.5,0-4.5-0.8-6.1-2.4c-1.6-1.6-2.4-3.7-2.4-6.1v-74.9c0-2.6,0.8-4.6,2.4-6.2c1.6-1.6,3.7-2.3,6.1-2.3c2.6,0,4.6,0.8,6.2,2.3
+		c1.6,1.6,2.4,3.6,2.4,6.2v1.8c3.6-3.6,7.8-6.4,12.8-8.3c4.9-2,10.2-2.9,15.8-2.9C168.7,209.2,175.6,210.9,181.8,214.3z" />
+            <path class="st1" id="XMLID_7_" d="M299.6,215.5c7.1,4.1,12.7,9.7,16.7,16.8c4,7.1,6,15,6,23.8c0,8.7-1.9,16.6-5.6,23.8
+		c-3.8,7.1-8.9,12.7-15.4,16.7c-6.5,4-13.9,6-21.9,6c-6.5,0-12.5-1.3-18.1-4c-5.6-2.7-10.4-6.4-14.3-11.2v45.3
+		c0,2.6-0.8,4.6-2.4,6.2c-1.6,1.6-3.6,2.4-6.2,2.4c-2.5,0-4.5-0.8-6.1-2.4c-1.6-1.6-2.4-3.6-2.4-6.2v-76.6c0-8.7,2-16.6,6.1-23.8
+		c4.1-7.1,9.6-12.7,16.6-16.8c7-4.1,14.8-6.1,23.4-6.1C284.6,209.4,292.5,211.5,299.6,215.5z M291.2,283.4
+		c4.5-2.7,8.1-6.5,10.7-11.2c2.6-4.8,3.9-10.1,3.9-16c0-5.9-1.3-11.3-3.9-16.1c-2.6-4.8-6.2-8.6-10.7-11.3
+		c-4.5-2.7-9.6-4.1-15.2-4.1c-5.6,0-10.7,1.4-15.2,4.1c-4.5,2.7-8.1,6.5-10.7,11.3c-2.6,4.8-3.9,10.2-3.9,16.1
+		c0,5.9,1.3,11.3,3.9,16c2.6,4.8,6.1,8.5,10.7,11.2c4.5,2.7,9.6,4.1,15.2,4.1C281.6,287.5,286.6,286.1,291.2,283.4z" />
+            <path class="st1" id="XMLID_10_" d="M393.5,172.1c1.5-0.9,3-1.3,4.7-1.3c2.3,0,4.3,0.8,6,2.4c1.6,1.6,2.4,3.6,2.4,6c0,1.2-0.2,2.5-0.7,3.7
+		l-50.5,126.4c-0.7,1.7-1.7,2.9-3.2,3.8c-1.5,0.8-3,1.3-4.7,1.3c-2.3,0-4.4-0.8-6-2.4c-1.7-1.6-2.5-3.6-2.5-6c0-1.1,0.3-2.3,0.8-3.7
+		l50.5-126.4C391,174.3,392,173,393.5,172.1z" />
+            <path class="st1" id="XMLID_12_" d="M497.2,243.5c0,3.2-1.5,5.8-4.5,7.7l-61.9,37.1c-1.2,0.8-2.6,1.2-4.2,1.2c-2.2,0-4.3-0.8-6-2.4
+		c-1.8-1.6-2.7-3.7-2.7-6.1c0-3.1,1.4-5.6,4.2-7.4l50.5-30.2L422,213.3c-2.8-1.7-4.2-4.2-4.2-7.6c0-2.4,0.8-4.3,2.5-5.8
+		c1.7-1.5,3.7-2.3,6-2.3c1.3,0,2.8,0.3,4.4,1l61.9,37.3C495.7,238.1,497.2,240.6,497.2,243.5z" />
+          </g>
+          <g id="XMLID_1_">
+            <path id="XMLID_23_" class="st0" d="M94.2,280.9c0,2.5-0.9,4.5-2.7,6.1c-1.8,1.6-3.8,2.4-6,2.4c-1.6,0-3-0.4-4.2-1.2l-61.9-37.1
+		c-3-1.9-4.5-4.5-4.5-7.7c0-2.9,1.5-5.4,4.5-7.6l61.9-37.3c1.6-0.7,3-1,4.4-1c2.3,0,4.4,0.8,6,2.3c1.7,1.5,2.5,3.4,2.5,5.8
+		c0,3.4-1.4,5.9-4.2,7.6l-50.5,30.1L90,273.5C92.8,275.3,94.2,277.8,94.2,280.9z" />
+            <path id="XMLID_21_" class="st0" d="M181.8,214.3c6.2,3.4,11,8.3,14.4,14.7c3.5,6.4,5.2,14.2,5.2,23.3v41.3c0,2.5-0.8,4.5-2.4,6.1
+		c-1.6,1.6-3.7,2.4-6.1,2.4c-2.5,0-4.5-0.8-6.1-2.4c-1.6-1.6-2.4-3.7-2.4-6.1v-41.3c0-9.1-2.4-15.9-7.3-20.6c-4.9-4.6-11.3-7-19.4-7
+		c-4.7,0-9,1-12.8,2.9c-3.9,1.9-6.9,4.5-9.1,7.7c-2.2,3.2-3.3,6.9-3.3,10.9v47.3c0,2.5-0.8,4.5-2.4,6.1c-1.6,1.6-3.6,2.4-6.2,2.4
+		c-2.5,0-4.5-0.8-6.1-2.4c-1.6-1.6-2.4-3.7-2.4-6.1v-74.9c0-2.6,0.8-4.6,2.4-6.2c1.6-1.6,3.7-2.3,6.1-2.3c2.6,0,4.6,0.8,6.2,2.3
+		c1.6,1.6,2.4,3.6,2.4,6.2v1.8c3.6-3.6,7.8-6.4,12.8-8.3c4.9-2,10.2-2.9,15.8-2.9C168.7,209.2,175.6,210.9,181.8,214.3z" />
+            <path id="XMLID_18_" class="st0" d="M299.6,215.5c7.1,4.1,12.7,9.7,16.7,16.8c4,7.1,6,15,6,23.8c0,8.7-1.9,16.6-5.6,23.8
+		c-3.8,7.1-8.9,12.7-15.4,16.7c-6.5,4-13.9,6-21.9,6c-6.5,0-12.5-1.3-18.1-4c-5.6-2.7-10.4-6.4-14.3-11.2v45.3
+		c0,2.6-0.8,4.6-2.4,6.2c-1.6,1.6-3.6,2.4-6.2,2.4c-2.5,0-4.5-0.8-6.1-2.4c-1.6-1.6-2.4-3.6-2.4-6.2v-76.6c0-8.7,2-16.6,6.1-23.8
+		c4.1-7.1,9.6-12.7,16.6-16.8c7-4.1,14.8-6.1,23.4-6.1C284.6,209.4,292.5,211.5,299.6,215.5z M291.2,283.4
+		c4.5-2.7,8.1-6.5,10.7-11.2c2.6-4.8,3.9-10.1,3.9-16c0-5.9-1.3-11.3-3.9-16.1c-2.6-4.8-6.2-8.6-10.7-11.3
+		c-4.5-2.7-9.6-4.1-15.2-4.1c-5.6,0-10.7,1.4-15.2,4.1c-4.5,2.7-8.1,6.5-10.7,11.3c-2.6,4.8-3.9,10.2-3.9,16.1
+		c0,5.9,1.3,11.3,3.9,16c2.6,4.8,6.1,8.5,10.7,11.2c4.5,2.7,9.6,4.1,15.2,4.1C281.6,287.5,286.6,286.1,291.2,283.4z" />
+            <path id="XMLID_16_" class="st0" d="M393.5,172.1c1.5-0.9,3-1.3,4.7-1.3c2.3,0,4.3,0.8,6,2.4c1.6,1.6,2.4,3.6,2.4,6
+		c0,1.2-0.2,2.5-0.7,3.7l-50.5,126.4c-0.7,1.7-1.7,2.9-3.2,3.8c-1.5,0.8-3,1.3-4.7,1.3c-2.3,0-4.4-0.8-6-2.4c-1.7-1.6-2.5-3.6-2.5-6
+		c0-1.1,0.3-2.3,0.8-3.7l50.5-126.4C391,174.3,392,173,393.5,172.1z" />
+            <path id="XMLID_14_" class="st0" d="M497.2,243.5c0,3.2-1.5,5.8-4.5,7.7l-61.9,37.1c-1.2,0.8-2.6,1.2-4.2,1.2c-2.2,0-4.3-0.8-6-2.4
+		c-1.8-1.6-2.7-3.7-2.7-6.1c0-3.1,1.4-5.6,4.2-7.4l50.5-30.2L422,213.3c-2.8-1.7-4.2-4.2-4.2-7.6c0-2.4,0.8-4.3,2.5-5.8
+		c1.7-1.5,3.7-2.3,6-2.3c1.3,0,2.8,0.3,4.4,1l61.9,37.3C495.7,238.1,497.2,240.6,497.2,243.5z" />
+          </g>
+        </svg>
+      </div>
+
+
+    </div>
+  </div>
+ </app-root>
+
   <dialog-outlet></dialog-outlet>
-    
+
 </body>
 
 </html>
