--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Portfolio</title>
+  <title>The Droid</title>
   <base href="/">
   <style type="text/css">
     .rect {
@@ -145,11 +145,7 @@
 
 
   <app-root>
-
-  </app-root>
-
-  <dialog-outlet></dialog-outlet>
-  <div class="anim-area">
+<div class="anim-area">
     <div class="container">
       <div class="rect rect-1">
       </div>
@@ -159,6 +155,10 @@
       </div>
     </div>
   </div>
+  </app-root>
+
+  <dialog-outlet></dialog-outlet>
+  
 </body>
 
 </html>
