--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,7 @@
 
 <head>
   <meta charset="utf-8">
+  <meta name="google-site-verification" content="79lVUcjdzxsJ3EEwEPEiLVLbu21Lf__4MC05ilxyxjo" />
   <title>The Droid</title>
   <base href="/">
   <style type="text/css">
@@ -128,7 +129,18 @@
       }
     }
   </style>
+  <script>
+    (function (i, s, o, g, r, a, m) {
+    i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
+      (i[r].q = i[r].q || []).push(arguments)
+    }, i[r].l = 1 * new Date(); a = s.createElement(o),
+      m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)
+    })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
 
+    ga('create', 'UA-102616958-1', 'auto');
+    ga('send', 'pageview');
+
+  </script>
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Comfortaa:300,400,700|Open+Sans:300,400,600,700" rel="stylesheet">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -145,20 +157,22 @@
 
 
   <app-root>
-<div class="anim-area">
-    <div class="container">
-      <div class="rect rect-1">
-      </div>
-      <div class="rect rect-2">
-      </div>
-      <div class="di">
+    <div class="anim-area">
+      <div class="container">
+        <div class="rect rect-1">
+        </div>
+        <div class="rect rect-2">
+        </div>
+        <div class="di">
+        </div>
       </div>
     </div>
-  </div>
   </app-root>
 
   <dialog-outlet></dialog-outlet>
-  
+
+
+
 </body>
 
 </html>
